syntax = "proto3";

package auth;

service AuthGrpcService {
  rpc Register (RegisterRequest) returns (RegisterResponse) {}
  rpc Login (LoginRequest) returns (LoginResponse) {}
  rpc RefreshToken (RefreshTokenRequest) returns (RefreshTokenResponse) {}
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse) {}
}

message User {
  string id = 1;
  string name = 2;
  string email = 3;
}

// Register
message RegisterRequest {
  string name = 1;
  string email = 2;
  string password = 3;
}

message RegisterResponse {
  string accessToken = 1;
  string refreshToken = 2;
}

// Login
message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string accessToken = 1;
  string refreshToken = 2;
}

// Refresh
message RefreshTokenRequest {
  string token = 1;
}

message RefreshTokenResponse {
  string accessToken = 1;
  string refreshToken = 2;
}

// Validate
message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool isValid = 1;
}
